Don't throw exception if boolean is false
Signed-off-by: Coline PILOQUET <coline.piloquet@rte-france.com>